--- a/rancid/configure.ac
+++ b/rancid/configure.ac
@@ -309,6 +309,32 @@ if test $EXPECT_PATH = no; then
 fi
 AC_SUBST(EXPECT_PATH)
 
+dnl locate python 3
+AC_PROG_INSTALL
+AC_PATH_PROG(PYTHON3_PATH,python3,no)
+if test $PYTHON3_PATH = no; then
+    unset ac_cv_path_PYTHON3_PATH
+    AC_PATH_PROG(PYTHON3_PATH,python,no)
+    if test $PYTHON3_PATH = no; then
+        AC_MSG_ERROR([can't locate a suitable python3.])
+	exit 1
+    else
+	$PYTHON3_PATH -c << EOF
+import sys
+if not sys.version_info[0] == 3:
+ sys.exit(1)
+
+EOF
+	if test $? -ne 0 ; then
+	   AC_MSG_ERROR([can't locate a suitable python3.])
+	   exit 1
+	fi
+    fi
+fi
+AC_SUBST(PYTHON3_PATH)
+PYTHON3=`basename $PYTHON3_PATH`
+AC_SUBST(PYTHON3)
+
 # look for lockfile utility
 AC_PATH_PROG(MKTEMP,mktemp,no)
 if test $MKTEMP = no; then
