--- a/bin/alogin.in
+++ b/bin/alogin.in
@@ -1,7 +1,5 @@
 #! @EXPECT_PATH@ --
 ##
-## $Id$
-##
 ## @PACKAGE@ @VERSION@
 @copyright@
 #
@@ -92,21 +90,32 @@ proc login { router user userpswd passwd prompt cmethod cyphertype } {
 
     expect {
 	"Connection refused" {
-	    catch {close}; catch {wait};
-	    sleep 0.3
-		expect eof
-		send_user "\nError: Connection Refused\n"; wait; return 1
+	  catch {close}; catch {wait};
+	  sleep 0.3
+	  catch {expect eof}
+	  send_user "\nError: Connection Refused\n";
+	  cath {wait};
+	  return 1
 	}
-	eof { send_user "\nError: Couldn't login\n"; wait; return 1
+	eof {
+	  send_user "\nError: Couldn't login\n";
+	  cath {wait};
+	  return 1
 	} "Unknown host\r\n" {
-	    expect eof
-	    send_user "\nError: Unknown host\n"; wait; return 1
+	  expect eof
+	  send_user "\nError: Unknown host\n";
+	  catch {wait};
+	  return 1
 	} "Host is unreachable" {
-	    expect eof
-	    send_user "\nError: Host Unreachable!\n"; wait; return 1
+	  expect eof
+	  send_user "\nError: Host Unreachable!\n";
+	  catch {wait};
+	  return 1
 	} "No address associated with name" {
-	    expect eof
-	    send_user "\nError: Unknown host\n"; wait; return 1
+	  expect eof
+	  send_user "\nError: Unknown host\n";
+	  catch {wait};
+	  return 1
 	}
 	-re "(Host key not found |The authenticity of host .* be established)" {
 	    expect {
