--- a/bin/mtlogin.in
+++ b/bin/mtlogin.in
@@ -1,7 +1,5 @@
 #! @EXPECT_PATH@ --
 ##
-## $Id$
-##
 ## @PACKAGE@ @VERSION@
 @copyright@
 #
@@ -259,12 +257,12 @@ foreach router [lrange $argv $i end] {
 
     # Figure out passwords
     if { $do_passwd } {
-      set pswd [find password $router]
-      if { [llength $pswd] == 0 } {
-	send_user "\nError - no password for $router in $password_file.\n"
-	continue
-      }
-      set passwd [join [lindex $pswd 0] ""]
+	set pswd [find password $router]
+	if { [llength $pswd] == 0 } {
+	    send_user -- "\nError: no password for $router in $password_file.\n"
+	    continue
+	}
+	set passwd [join [lindex $pswd 0] ""]
     }
 
     # Figure out username
