--- a/bin/xlogin.in
+++ b/bin/xlogin.in
@@ -543,7 +543,7 @@ foreach router [lrange $argv $i end] {
 	    send_user -- "\nError: no enable password for $router in $password_file.\n"
 	    continue
 	}
-	if { $do_password } {
+	if { $do_passwd } {
 	    set passwd [join [lindex $pswd 0] ""]
 	} else {
 	    set passwd $userpasswd
