--- a/man/Makefile.in
+++ b/man/Makefile.in
@@ -279,7 +279,7 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 man_gen_MANS = cloginrc.5 lg.conf.5 rancid.3 rancid.conf.5 \
 		rancid.types.conf.5 lg_intro.1
 
-man_nogen_MANS = agmrancid.1 alogin.1 anlogin.1 \
+man_nogen_MANS = agmrancid.1 ahlogin.1 alogin.1 anlogin.1 \
 		arancid.1 avologin.1 avorancid.1 blogin.1 brancid.1 \
 		cat5rancid.1 clogin.1 control_rancid.1 csblogin.1 cssrancid.1 \
 		dllogin.1 \
