--- a/bin/clogin.in
+++ b/bin/clogin.in
@@ -718,7 +718,7 @@ foreach router [lrange $argv $i end] {
 		send "terminal width 132\r"
 	    }
 	    expect -re $prompt		{}
-    } elsif { [string compare "hiveos" "$platform"] } {
+    } elseif { [string compare "hiveos" "$platform"] } {
         # aerohive needs "console page 0"
         send "console page 0\r"
 	} else {
